[package]
name = "rust-blockchain"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
sha2 = "0.8.0"
